@@ -3,6 +3,7 @@ $Id$
 1.8.2 --/--/----
 
 Now handles multiple inputs with no output file/dir
+Warns when copying non-text nodes to properties
 
 1.8.1 26/11/2003
 
